--- a/StudentSoapDB_azure/StudentSoapDB_azure.csproj
+++ b/StudentSoapDB_azure/StudentSoapDB_azure.csproj
@@ -62,7 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="StudentHandler.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Student.cs" />
@@ -76,6 +78,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\StudentSoapAzure - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
